[gd_scene load_steps=7 format=3 uid="uid://dklura1qtaq5o"]

[ext_resource type="Script" path="res://level.gd" id="1_a6g8l"]
[ext_resource type="Script" path="res://BeatProgrammer.gd" id="4_evaa7"]
[ext_resource type="PackedScene" uid="uid://mnxchri4vink" path="res://beat_timer.tscn" id="4_k5mih"]
[ext_resource type="Texture2D" uid="uid://n4swdf7yvnd1" path="res://indicator.png" id="4_q67o7"]
[ext_resource type="TileSet" uid="uid://by52l4ipgx4pf" path="res://tileset.tres" id="5_ul80q"]
[ext_resource type="PackedScene" uid="uid://2isp2wjuf5c0" path="res://beat_control_checkbox.tscn" id="6_l0rwb"]

[node name="BaseLevel" type="Node"]
script = ExtResource("1_a6g8l")

[node name="Camera2D" type="Camera2D" parent="."]
metadata/_edit_lock_ = true

[node name="Indicator" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(440, -234)
texture = ExtResource("4_q67o7")
metadata/_edit_lock_ = true

[node name="BeatProgrammer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
anchors_preset = -1
anchor_right = 0.035
offset_left = 19.0
offset_top = -293.0
offset_right = 495.68
offset_bottom = -150.0
script = ExtResource("4_evaa7")
forward_program = Array[bool]([false, true, false, false, false, false, false, false])
metadata/_edit_lock_ = true

[node name="BeatTimer" parent="BeatProgrammer" instance=ExtResource("4_k5mih")]

[node name="Forward Controls" type="HBoxContainer" parent="BeatProgrammer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Label" type="Label" parent="BeatProgrammer/Forward Controls"]
layout_mode = 2
text = "Forward"

[node name="BeatControlCheckbox" parent="BeatProgrammer/Forward Controls" groups=["Beat1"] instance=ExtResource("6_l0rwb")]
layout_mode = 2
direction = Vector2(0, -1)

[node name="@CheckBox@25547" parent="BeatProgrammer/Forward Controls" groups=["Beat2"] instance=ExtResource("6_l0rwb")]
layout_mode = 2
button_pressed = true
direction = Vector2(0, -1)

[node name="@CheckBox@25548" parent="BeatProgrammer/Forward Controls" groups=["Beat3"] instance=ExtResource("6_l0rwb")]
layout_mode = 2
direction = Vector2(0, -1)

[node name="@CheckBox@25549" parent="BeatProgrammer/Forward Controls" groups=["Beat4"] instance=ExtResource("6_l0rwb")]
layout_mode = 2
direction = Vector2(0, -1)

[node name="Left Controls" type="HBoxContainer" parent="BeatProgrammer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Label" type="Label" parent="BeatProgrammer/Left Controls"]
layout_mode = 2
text = "Left"

[node name="BeatControlCheckbox" parent="BeatProgrammer/Left Controls" groups=["Beat1"] instance=ExtResource("6_l0rwb")]
layout_mode = 2
direction = Vector2(-1, 0)

[node name="@CheckBox@25550" parent="BeatProgrammer/Left Controls" groups=["Beat2"] instance=ExtResource("6_l0rwb")]
layout_mode = 2
direction = Vector2(-1, 0)

[node name="@CheckBox@25551" parent="BeatProgrammer/Left Controls" groups=["Beat3"] instance=ExtResource("6_l0rwb")]
layout_mode = 2
direction = Vector2(-1, 0)

[node name="@CheckBox@25552" parent="BeatProgrammer/Left Controls" groups=["Beat4"] instance=ExtResource("6_l0rwb")]
layout_mode = 2
direction = Vector2(-1, 0)

[node name="Right Controls" type="HBoxContainer" parent="BeatProgrammer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Label" type="Label" parent="BeatProgrammer/Right Controls"]
layout_mode = 2
text = "Right"

[node name="BeatControlCheckbox" parent="BeatProgrammer/Right Controls" groups=["Beat1"] instance=ExtResource("6_l0rwb")]
layout_mode = 2
direction = Vector2(1, 0)

[node name="@CheckBox@25553" parent="BeatProgrammer/Right Controls" groups=["Beat2"] instance=ExtResource("6_l0rwb")]
layout_mode = 2
direction = Vector2(1, 0)

[node name="@CheckBox@25554" parent="BeatProgrammer/Right Controls" groups=["Beat3"] instance=ExtResource("6_l0rwb")]
layout_mode = 2
direction = Vector2(1, 0)

[node name="@CheckBox@25555" parent="BeatProgrammer/Right Controls" groups=["Beat4"] instance=ExtResource("6_l0rwb")]
layout_mode = 2
direction = Vector2(1, 0)

[node name="Backward Controls" type="HBoxContainer" parent="BeatProgrammer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Label" type="Label" parent="BeatProgrammer/Backward Controls"]
layout_mode = 2
text = "Back"

[node name="BeatControlCheckbox" parent="BeatProgrammer/Backward Controls" groups=["Beat1"] instance=ExtResource("6_l0rwb")]
layout_mode = 2
direction = Vector2(0, 1)

[node name="@CheckBox@25556" parent="BeatProgrammer/Backward Controls" groups=["Beat2"] instance=ExtResource("6_l0rwb")]
layout_mode = 2
direction = Vector2(0, 1)

[node name="@CheckBox@25557" parent="BeatProgrammer/Backward Controls" groups=["Beat3"] instance=ExtResource("6_l0rwb")]
layout_mode = 2
direction = Vector2(0, 1)

[node name="@CheckBox@25558" parent="BeatProgrammer/Backward Controls" groups=["Beat4"] instance=ExtResource("6_l0rwb")]
layout_mode = 2
direction = Vector2(0, 1)

[node name="Label" type="Label" parent="BeatProgrammer"]
layout_mode = 2
text = "Edit program to restart level"
horizontal_alignment = 2

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("5_ul80q")
cell_quadrant_size = 64
format = 2
layer_0/tile_data = PackedInt32Array(131073, 0, 0, 65536, 0, 0, 196606, 0, 0, 262142, 0, 0, 196605, 0, 0, -65540, 1, 65536)
metadata/_edit_lock_ = true
